css/style.css
html {
    box-sizing: border-box;
    overflow-y: scroll;
    scroll-behavior: smooth;
}
*, *::before, *::after {
    box-sizing: inherit;
    margin: 0;
    padding: 0;
    font-family: inherit;
    font-weight: 400;
    outline: transparent;
    font-size: inherit;
}
html::-webkit-scrollbar {
    display: none;
}
html::-moz-scrollbar {
    width: 0px;
    height: 0px;
}
ul>li {
    list-style: none;
}
ol>li{
    margin-left: 1em;
}
a {
  text-decoration: none;
  color: inherit;
}
body {
    font-family: 'PT Serif', serif;
    color: #272F16;
    font-size: 18px;
    line-height: 24px;
    background-color: #ECEDE8;
}
/* .section {
    min-height: 100vh;
    background-image: url('../images/imgonline-com-ua-Compressed-Cr7J2Z87bwNBpRmi.jpg');
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    background-attachment: fixed;
    -webkit-background-attachment: fixed;
    -moz-background-attachment: fixed;
} */
.bgi {
  z-index: -1;
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-size: cover;
  background-image: url('../images/imgonline-com-ua-Compressed-Cr7J2Z87bwNBpRmi.jpg');
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-position: center center;

}
.container {
    max-width: 1200px;
    padding: 0 15px;
    margin: 0 auto;
}
.hide {
    display: none;
}
.m0{
    margin: 0 !important;
}
.container-inner {
    display: flex;
    padding: 52px 0;
    justify-content: space-between;
}
.filter-side {
    background-color: rgba(255, 255, 255, .56);
    border-radius: 22px;
    border: 1px solid #C5CEC4;
    box-shadow: 0 0 3px rgba(51, 72, 7, .87);
    padding: 40px 30px;
    max-width: 426px;
    width: 100%;

    position: sticky;
    top: 52px;
}

.filter-side-input {
    width: 100%;
    height: 49px;
    padding: 14px 30px 15px 49px;
    outline: none;
    border-radius: 7px;
    border: none;
    box-shadow: 0 0 3px rgba(51, 72, 7, .87);
    margin-bottom: 22px;
    font-family: 'PT Serif', serif;
    color: #272F16;
    font-size: 18px;
    line-height: 19px;
}
.filter-side-input::placeholder {
    font-size: 16px;
    line-height: 19px;
    font-family: 'Raleway', sans-serif;
    color: rgba(39, 47, 22, .76);
}
.filter-side-reset {
  border: none;
  outline-color: #263C03;
  box-shadow: none;
  position: absolute;
  top: 13px;
  right: 6px;
  background-color: transparent;
  cursor: pointer;
  display: none;
}
.filter-side-input:focus+.filter-side-reset {
  display: block;
}
.filter-side-reset:active {
  display: block;
}
.input-wrap {
    position: relative;
}
.input-wrap::before{
    content: "";
    position: absolute;
    top: 14px;
    left: 16px;
    width: 20px;
    height: 20px;
    background-image: url('../images/smb.svg');
    background-size: cover;
    background-repeat: no-repeat;
}
.btn-wrap {
    font-size: 0;
    display: grid;
    grid-template-columns: repeat(3,1fr);
    grid-gap: 15px 30px;
    margin-bottom: 40px;

}
.nav-btn {
    width: 102px;
    height: 36px;
    background-color: #526534;
    color: #fff;
    border: none;
    cursor: pointer;
    font-family: 'PT Serif', serif;
    font-size: 18px;
    line-height: 24px;
    border-radius: 2px;
    box-shadow: none;
}
.nav-btn:hover{
    background-color: #60753E;
}
.nav-btn.chosen {
    background-color: #263c03;
    border: 1px solid #365013;
}
.nav-btn#btnShowAll{
    width: 100%;
    grid-column: 1/4;
}
.active#btnShowAll{
  background-color: #727f09;
  border: 1px solid #365013;
}
#btnToggleFilters {
  width: 100%;
  grid-column: 1/4;
  display: none;
  margin-bottom: 10px;
}
.active#btnToggleFilters{
  background-color: #727f09;
  border: 1px solid #365013;
}
.outMenuItemLi{
    background-color: rgba(255, 255, 255, .89);
    border-radius: 2px;
    box-shadow: 0 0 3px #526534;
    cursor: pointer;
}
.outMenuItemLi a{
  padding: 9px 15px 10px;
  display: block;
}
.outMenuItemLiNone {
    padding: 6px 14px 7px;
    background-color: rgb(160 47 47);
    border-radius: 2px;
    box-shadow: 0 0 3px #822a2a;
    color: #fff;
    text-align: center;
}
.outMenuItemLi+.outMenuItemLi {
    margin-top: 20px;
}
.outMenuItemLi:hover {
    background-color: #F7FAE9;
}
.outMenuItemLi.active {
    background-color: #3a540f;
    color: #fff;
}
.result-side {
    max-width: 674px;
    width: 100%;
}
.outRecipe {
    padding: 40px 65px;
    background-color: rgba(255, 255, 255, .90);
    box-shadow: 0 0 3px rgba(51, 72, 7, .98);
    border-radius: 37px;
    position: sticky;
    top: 52px;
}
.outRecipe-title {
    font-size: 45px;
    line-height: 46px;
    margin-bottom: 17px;
    padding-right: 10px;
}
.outRecipe-needs{
    font-family: 'Raleway', sans-serif;
    font-size: 20px;
    line-height: 26px;
    margin-bottom: 34px;
    padding-right: 10px;
}
.outRecipe-steps{
    font-family: 'Raleway', sans-serif;
    font-size: 20px;
    line-height: 26px;
    padding-right: 10px;
}
.outRecipe-comments{
    font-family: 'Raleway', sans-serif;
    font-size: 17px;
    line-height: 23px;;
    padding-right: 10px;
    margin-bottom: 20px;
}
.outRecipe-inner {
  overflow-y: auto;
  max-height: calc(100vh - 140px);
  scrollbar-color: #526534 #C5CEC4;
  scrollbar-width: thin;
}


.outRecipe-inner::-webkit-scrollbar {
  background-color: #C5CEC4;
  width: 7px;
  height: 10px;
  border-radius: 10px;
}
.outRecipe-inner::-webkit-scrollbar-thumb {
  background-color: #526534;
  border-radius: 10px;
}

